# active-spatial-reasoning

./: .gitattributes  .gitignore  README.md  evaluate.py  inference.sh  pyproject.toml  train.sh
agent_system/environments/: base.py  env_manager.py
agent_system/environments/env_package/mind/: __init__.py  context.py  envs.py  projection.py
agent_system/environments/prompts/: __init__.py  mind.py
agent_system/memory/: memory.py
agent_system/multi_turn_rollout/: rollout_loop.py  utils.py
agent_system/reward_manager/: episode.py
verl/trainer/: main_ppo.py
verl/trainer/config/: ppo_trainer.yaml
verl/trainer/ppo/: core_algos.py  ray_trainer.py
verl/utils/: flops_counter.py
verl/utils/debug/: performance.py
verl/utils/reward_score/prime_math/: __init__.py
verl/workers/: fsdp_workers.py
verl/workers/actor/: dp_actor.py
verl/workers/reward_manager/: batch.py  dapo.py  naive.py  prime.py
verl/workers/rollout/sglang_rollout/: sglang_rollout.py
verl/workers/rollout/vllm_rollout/: vllm_rollout.py  vllm_rollout_spmd.py
verl/workers/sharding_manager/: fsdp_vllm.py
