[project]
name = "active-spatial-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "accelerate>=1.10.1",
    "beautifulsoup4>=4.14.2",
    "codetiming>=1.4.0",
    "datasets>=4.2.0",
    "dill>=0.4.0",
    "fastapi>=0.119.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "grpcio==1.60.1",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "liger-kernel>=0.6.2",
    "lxml>=6.0.2",
    "numpy",
    "openai>=2.5.0",
    "packaging>=20.0",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pre-commit>=4.3.0",
    "pyarrow>=19.0.0",
    "pybind11>=3.0.1",
    "pydantic>=2.12.3",
    "pylatexenc>=2.10",
    "qwen-vl-utils[decord]>=0.0.14",
    "ray[default]>=2.47.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "setuptools==80.9.0",
    "swanlab>=0.6.4",
    "tensorboard>=2.20.0",
    "tensordict<=0.6.2",
    "torchdata>=0.11.0",
    "transformers==4.51.1",
    "uvicorn>=0.38.0",
    "vllm==0.8.5",
    "wandb>=0.22.2",
    "xmltodict>=1.0.2",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
build = ["torch==2.6", "setuptools", "packaging"]
compile = ["flash-attn@https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
# Note: While the formatter will attempt to format lines such that they remain within the line-length,
# it isn't a hard upper bound, and formatted lines may exceed the line-length.
line-length = 300 # TODO: Reduce this to a more reasonable value

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
# c.f. https://github.com/vllm-project/vllm/blob/ce8d6b75fc0586045df75ee1568a5b5f9957251b/pyproject.toml

select = [         # 选择的规则
    "F",
    "E",
    "W",
    "UP",
]
ignore = ["F401", "W293"]  # 忽略的规则%

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
# True means `setuptools` will attempt to include all relevant files in package_data automatically.
# This corresponds to `include_package_data=True` in setup.py.
include-package-data = true

# We read the version from a file in 'verl/version/version'
[tool.setuptools.dynamic]
version = {file = "verl/version/version"}

# If you need to mimic `package_dir={'': '.'}`:
[tool.setuptools.package-dir]
"" = "."

# If you need to include specific non-Python data (like YAML files or version file):
# This is the rough equivalent of package_data={'': ['version/*'], 'verl': ['trainer/config/*.yaml']}
[tool.setuptools.package-data]
verl = [
  "version/*",
  "trainer/config/*.yaml"
]
